--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "MernJWT",
+  "name": "lichy-dessa-peluqueria",
   "version": "1.0.0",
-  "description": "",
+  "description": "Applicacion para la venta de cursos online",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,7 +9,7 @@
     "start": "node app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Corvatta Franco -corvattafranco@gmail.com-",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
